syntax = "proto3";

option go_package = "/genproto";

package protos;

import "common.proto";

service SkillsService {
    rpc CreateSkill (CreateSkillRequest) returns (Skill) {}
    rpc UpdateSkill (UpdateSkillRequest) returns (Void) {}
    rpc DeleteSkill (ById) returns (Void) {}
    rpc GetSkill (ById) returns (Skill) {}
    rpc GetSkills (SkillFilter) returns (Skills) {}
}

message Skill {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string level = 4;
}

message CreateSkillRequest {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string level = 4;
}

message UpdateSkillRequest {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string level = 4;
}

message SkillFilter {
    string user_id = 1;
    string name = 2;
}

message Skills {
    repeated Skill Skills = 1;
}